# nautobot-jobs-cookiecutter

./: .gitignore  .markdownlint.yml  .yamllint.yml  Dockerfile  README.md  TODO.md  cookiecutter.json  docker-compose.yml  pyproject.toml  tasks.py  update_all.sh
.github/workflows/: ci.yml
apps/: cookiecutter.json
apps/hooks/: post_gen_project.py
apps/{{ cookiecutter.project_slug }}/: .gitignore  invoke.example.yml  mkdocs.yml  pyproject.toml  tasks.py
apps/{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.md
apps/{{ cookiecutter.project_slug }}/development/: Dockerfile  creds.example.env  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.vscode-rdb.yml  nautobot_config.py
apps/{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  signals.py
hooks/: post_gen_project.py  pre_gen_project.py
jobs/: cookiecutter.json
jobs/hooks/: post_gen_project.py  pre_gen_project.py
jobs/{{ cookiecutter.project_slug }}/: GETTING_STARTED.md  README.md  invoke.example.yml  pyproject.toml  tasks.py
jobs/{{ cookiecutter.project_slug }}/development/: docker-compose.base.yml  docker-compose.dev.yml
jobs/{{ cookiecutter.project_slug }}/jobs/: example-job.py  verify-hostname.py
nautobot-jobs/: LICENSE  README.md  pyproject.toml
tests/: conftest.py  test_bake_nautobot_chatops_plugin.py  test_nautobot_jobs_cookie.py
{{ cookiecutter.project_slug }}/: pyproject.toml
{{ cookiecutter.project_slug }}/development/: nautobot_config.py
(+8 files in other folders)
