[tool.poetry]
name = "nautobot-jobs-cookiecutter"
version = "0.1.0"
description = "CookieCutter template for Nautobot Jobs Development"
authors = ["Network to Code, LLC <info@networktocode.com>", "Hugo Tinoco, <htinoco@dev-knot.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^2.1.1"
cruft = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cookies = "*"
invoke = "*"
yamllint = "*"
black = "*"
toml = "*"
isort = "*"
pydocstyle = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!__init__).*\\.py"
match-dir = "(?!tests|migrations|development|jobs)[^\\.].*"
add_ignore = "D212"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-vv --doctest-modules"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | jobs
)/
'''